--- a/themes/ecke/css/style.css
+++ b/themes/ecke/css/style.css
@@ -6,7 +6,9 @@
 }
 
 ol, ul {
-    padding-left: 1.5em;
+    /*padding-left: 1.5em;*//* I removed this */
+    padding-left: 40px;/* I added this */
+    padding-right: 40px;/* I added this */
 }
 
 .hidden {
@@ -90,15 +92,19 @@ body {
     color: #444;
 }
 
+
 p, td, th, li, dd {
     text-align: justify;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    padding-left: 40px;/* I added this */
+    padding-right: 40px;/* I added this */
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
+    padding-left: 40px; /* I added this */
 }
 
 img {
