--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -11,3 +11,5 @@ $border: 2px solid #000;
 $main-margin: 2em;
 $padding: 40px;
 $box-shadow: 10px 10px rgb(0, 0, 0);
+$small-box-shadow: 6px 6px rgb(0, 0, 0);
+$small-box-shadow-orange: 6px 6px #ff9b30;
