--- a/themes/kmom02/scss/base-dark.scss
+++ b/themes/kmom02/scss/base-dark.scss
@@ -15,6 +15,7 @@ p {
     box-sizing: border-box;
     float: left; 
     margin-right: 20px;
+    filter: grayscale(30%);
 }
 
 * {
@@ -50,7 +51,7 @@ body {
     margin-right: $margin-side;
     margin-bottom: $margin-bottom;
     margin-left: $margin-side;
-    background: $background-gradient;
+    background-color: $background-alternative-color;
     border: $border;
     box-shadow: $box-shadow;
 }
