--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -18,3 +18,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'footer-dark';
 @import 'mobile-menu-dark';
 @import 'technologies-dark';
+@import 'gallery-dark';
+@import 'video';
+
+
