--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -18,6 +18,10 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'footer';
 @import 'mobile-menu';
 @import 'technologies';
-@import 'responsive';
+
+@import 'gallery';
+@import 'video';
+
+
 
 
