--- a/themes/kmom02/scss/base.scss
+++ b/themes/kmom02/scss/base.scss
@@ -12,7 +12,7 @@ p {
 .picture {
     border: $border;
     box-sizing: border-box;
-    max-width: 40vw;
+    max-width: 60%;
     margin-bottom: 0.5em;
     float: left; 
     margin-right: 20px;
@@ -53,6 +53,10 @@ body {
     margin-left: $margin-side;
     background: $background-gradient;
     border: $border;
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: 800px;
     box-shadow: $box-shadow;
     @media (max-width: 600px) {
         width: 100%;
