--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -1,36 +1,44 @@
+.nav {
 
-.nav{
+    max-width: 1200px;
+    margin: 0 auto; 
+
     a {
-        color: #e0e0e0;
-        font-size: 15px;
+        color: $font-color;
+        font-size: 20px;
         padding-right: 1em;
-        transition: all 0.3s ease;
+        text-decoration: none;
+    }
+
+    li {
+        color: $font-color;
     }
 
     a:hover {
-        color: #000;
-        transform: scale(1.2);
-        font-size: 18px;
+        color: $font-alternative-color;
+        text-decoration: underline;
     }
 
     .active {
-        background-color: $accent-color;
-        color: #000;
         font-weight: bold;
         font-size: larger;
+        text-decoration: underline;
     }
 }
 
 .header, .site-header {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Title */
 
 .logo {
     padding: 3em 3em 3em 0;
-    max-width: 15vw;
+    max-width: 200px;
+    filter: grayscale(30%);
 }
 
 @media (max-width: 767px) {
@@ -55,4 +63,10 @@
     p {
         font-style: italic;
     }
+}
+
+.header {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
