--- a/themes/kmom02/scss/base-dark.scss
+++ b/themes/kmom02/scss/base-dark.scss
@@ -10,7 +10,7 @@ p {
 }
 
 .picture {
-    border: $border;
+    border: $border-black;
     box-sizing: border-box;
     max-width: 60%;
     margin-bottom: 0.5em;
@@ -53,7 +53,7 @@ body {
     margin-bottom: $margin-bottom;
     margin-left: $margin-side;
     background-color: $background-alternative-color;
-    border: $border;
+    border: $border-black;
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
