--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -1,7 +1,14 @@
 .nav {
 
-    max-width: 1200px;
+    //max-width: 1200px;
     margin: 0 auto; 
+    border-top: $border;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    //background-color: $background-alternative-color;
+
+
 
     a {
         color: $font-color;
@@ -38,10 +45,13 @@
 .logo {
     padding: 3em 3em 3em 0;
     max-width: 200px;
-    filter: grayscale(30%);
 }
 
 @media (max-width: 767px) {
+    .header {
+        border-bottom: none;
+    }
+
     .title, .logo {
         padding: 1em 1em 1em 0;
     }
@@ -52,6 +62,10 @@
 
     .logo {
         max-width: 15vw;
+    }
+
+    .nav {
+        border:none;
     }
 }
 
@@ -66,7 +80,8 @@
 }
 
 .header {
-    max-width: 800px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
+    border-bottom: $border;
 }
