--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -8,7 +8,9 @@ $accent-color: #323232;
 $icon-accent-color: #cc802a;
 $background-color: #1e1d1b;
 $background-alternative-color: #323232;
-$border: 2px solid #000;
+$border: 2px solid #6e6e6b;
+$border-black: 2px solid #000000;
+
 $margin-top: 2em;
 $margin-side: 4em;
 $margin-bottom: 2em;
