--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -49,7 +49,7 @@
 
 @media (max-width: 767px) {
     .header {
-        border-bottom: none;
+        border-bottom: 0;
     }
 
     .title, .logo {
@@ -65,7 +65,7 @@
     }
 
     .nav {
-        border:none;
+        border: 0;
     }
 }
 
