--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -21,7 +21,9 @@ $small-box-shadow-orange: 6px 6px #cc802a;
 $dark-code-color: #000;
 $dark-code-link-color: #cc802a;
 $box-dark-color: #585855;
-$box-dark-hover-color: #6e6e6b
+$box-dark-hover-color: #6e6e6b;
+$selection-color: #cc802a;
+$link-color: #d59042;
 
 /*$header-font: 'Montserrat', sans-serif;
 $main-font: 'Roboto', sans-serif;
