--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -5,16 +5,19 @@ $main-font: 'Merriweather', serif;
 $font-color: #242424;
 $font-alternative-color: #fff;
 $accent-color: #FADF50;
-$background-color: #FA7C50;
+$background-color: rgb(245, 140, 53);
 $background-gradient: linear-gradient(#FAB64F, #FACA50);
 $background-alternative-color: #FAB64F;
 $border: 2px solid #000;
 $margin-top: 2em;
 $margin-side: 4em;
 $margin-bottom: 2em;
-$padding: 40px;
+$padding: 2em;
 $box-shadow: 10px 10px rgb(0, 0, 0);
 $small-box-shadow: 6px 6px rgb(0, 0, 0);
 $small-box-shadow-orange: 6px 6px #ff9b30;
-$box-dark-color: #FA9950;
+$box-dark-color: #fbc41e;
 $box-dark-hover-color: #FADF50;
+$selection-color: #FADF50;
+$border-code-color: #242424;
+$link-color: #101120;
