--- a/themes/kmom02/gallery.twig
+++ b/themes/kmom02/gallery.twig
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="embed-container">
-            <iframe src="https://www.youtube.com/embed/3GRSbr0EYYU" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Fenton Video" src="https://www.youtube.com/embed/3GRSbr0EYYU" frameborder="0" allowfullscreen></iframe>
         </div>
         
     </div>
