--- a/themes/kmom02/scss/base-dark.scss
+++ b/themes/kmom02/scss/base-dark.scss
@@ -98,6 +98,15 @@ body {
     font-family: $main-font;
     line-height: 1.5rem;
     color: $font-color;
+
+
+    background-image: url("../../../assets/img/xxl_black_pattern.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    margin: 0;
+
 }
 
 
@@ -109,12 +118,20 @@ p, td, th, li, dd {
     //padding-right: $padding;/* I added this */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
     padding-left: $padding; /* I added this */
     margin-top: 0.6em;
 }
+
+h1 {
+    margin-bottom: 0.6em;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 0.6em;
+}
+
 
 /* BELOW ARE PREPARED STYLES FOR CODE/PRE/BLOCKQUOTE, FEEL FREE TO REMOVE IT  */
 
@@ -146,5 +163,9 @@ pre code {
     background: transparent;
     overflow-x: auto;
     line-height: 1.4;
+}
+
+::selection {
+    background: $selection-color; /* WebKit/Blink Browsers */
 }
 
