--- a/themes/kmom02/scss/base.scss
+++ b/themes/kmom02/scss/base.scss
@@ -6,7 +6,11 @@ p {
     padding-left: 2em;
     padding-right: 2em;
     padding-bottom: 0.5em;
-    color: $font-color
+    color: $font-color;
+}
+
+a {
+    color: $link-color;
 }
 
 .picture {
@@ -42,7 +46,6 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    background-color: $background-color;
 }
 
 .main {
@@ -51,7 +54,7 @@ body {
     margin-right: $margin-side;
     margin-bottom: $margin-bottom;
     margin-left: $margin-side;
-    background: $background-gradient;
+    background: $background-color;
     border: $border;
     margin-left: auto;
     margin-right: auto;
@@ -97,7 +100,15 @@ body {
 body {
     font-family: $main-font;
     line-height: 1.5rem;
-    color: $font-color;
+
+    background-image: url("../../../assets/img/orange.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    margin: 0;
+
+
 }
 
 
@@ -109,10 +120,17 @@ p, td, th, li, dd {
     //padding-right: $padding;/* I added this */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
     padding-left: $padding; /* I added this */
+    margin-top: 0.6em;
+}
+
+h1 {
+    margin-bottom: 0.6em;
+    font-weight: bold;
+    text-align: center;
     margin-top: 0.6em;
 }
 
@@ -125,7 +143,7 @@ code {
     padding: 0.1em 0.2em;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $box-dark-color;
     font-family: monospace;
     font-size: 0.85rem;
     line-height: 1.9824;
@@ -135,7 +153,7 @@ pre {
     padding: 0 1em;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $background-alternative-color;
 }
 
 pre code {
@@ -143,8 +161,11 @@ pre code {
     margin: 0;
     padding: 1.1111em 0;
     border: 0 none;
-    background: transparent;
+    background: $box-dark-color;
     overflow-x: auto;
     line-height: 1.4;
 }
 
+::selection {
+    background: $selection-color; /* WebKit/Blink Browsers */
+}
