--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    //background-color: $background-alternative-color;
+    //background: $background-color;
 
 
 
